Mindera/LIMSCallout/force-app/main/default/objects/Order__c/fields/Clinician_Name_E_signature__c.field-meta.xml
<CustomField>
    <fullName>Clinician_Name_E_signature__c</fullName>
    <label>Clinician Name (E-signature)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>