Mindera/LIMSCallout/force-app/main/default/objects/Order__c/fields/Order_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_Completed_Date__c</fullName>
    <label>Date of Reporting</label>
    <type>Date</type>
</CustomField>