Mindera/LIMSCallout/force-app/main/default/objects/Order__c/fields/Order_Entry_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_Entry_Date__c</fullName>
    <label>Entry Date</label>
    <type>Date</type>
</CustomField>