Mindera/LIMSCallout/force-app/main/default/objects/Order__c/fields/Primary_Payor_Payor_ID__c.field-meta.xml
<CustomField>
    <fullName>Primary_Payor_Payor_ID__c</fullName>
    <label>Primary Payor: Payor ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>