Mindera/LIMSCallout/force-app/main/default/objects/Order__c/fields/Secondary_Payor_Type__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Payor_Type__c</fullName>
    <label>Secondary Payor Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>