Mindera/LIMSCallout/force-app/main/default/objects/Order__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>LIMS_Order_Number__c</columns>
    <columns>Order_Status__c</columns>
    <columns>Order_Entry_Date__c</columns>
    <columns>Order_Completed_Date__c</columns>
    <columns>Clinician_Name_E_signature__c</columns>
    <columns>Primary_Payor_Name__c</columns>
    <columns>Primary_Payor_Type__c</columns>
    <columns>Primary_Payor_Payor_ID__c</columns>
    <columns>Secondary_Payor_Name__c</columns>
    <columns>Secondary_Payor_Type__c</columns>
    <columns>Secondary_Payor_Payor_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>